17/05/2022 version 0.42 Shilpamariya
	[ZB-8339] Unit creation

09/05/2022 Version 0.41 Aswanth
	*ZB-8486-payment advises error

09/05/2022 Version 0.40 Neha
	[ZB-8339] Unit Creation-Feedback

27/04/2022 Version 0.39 Shilpa mariya
	[ZB-8339] restrict unit creation : feedback

25/04/2022 Version 0.38 Shilpa mariya
	[ZB-8339] restrict unit creation

07/04/2022 Version 0.37 Neha
	[ZB-8263] Payment / Receipt Voucher Menu

14/03/2022 Version 0.36 Shilpa mariya
	* ZB-8125-Validation for cpr and password

12/11/2021 Version 0.35 Ansu
	* ZB-7425-Terminate Button in Expired State
	 
28/10/2021 Version 0.34 Roopa
	* ZB-7318 - Make the Building code required

23/09/2021 Version 0.33 Neha
	*[ZB-6971] Unit Selling Price

Version 0.32 07/09/2021 by Neha
	* [ZB-6120] Property advisor permissions

Version 0.31 17/08/2021 by Dhanalakshmi
	* Booking fee (%) decimal precision corrected

Version 0.29 28/06/2021 by Dhanalakshmi
	* ZB-6430 - Go live Plan : Duplicate account menu to remove

Version 0.28 25/06/2021 by Neha
	[ZB-6400] go live plan : Error on agreement list view filter

Version 0.27 26/05/2021 by Neha
	[ZB-6180] Status field value should be in camelcaps

Version 0.26 18/05/2021 by Neha
	Changed security for module and building model

Version 0.25 19/02/2021 by Neha
	[ZB-5757] Lease : many2one field in account invoice

Version 0.24 01/02/2021 by Neha
	[ZB-5501] While trying to view rent analysis report it is giving an error

Version 0.22 13/01/2021 by Dayana
	Solve the issue in stock.picking

Version 0.22 08/01/2021 by Neha
	[ZB-5351] - hide book unit and buy unit buttons from sellable unit

Version 0.21 08/01/2021 by Neha
	[ZB-5164] lease and rental invoice-replaced _company_default_get function

Version 0.20 07/01/2021 by Neha
	[ZB-5043] Account move : legal buttons

Version 0.19 06/01/2020 by Dayana
	capital S for contract signed in unit

Version 0.18 05/01/2021 by Neha
	remove the block fiscal lock period from accounting settings

Version 0.17 31/12/2020 by Dayana